k8s/templates/platform/minikube/patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhb-backend
spec:
  template:
    spec:
      containers:
        - name: hhb-backend
