k8s/templates/platform/minikube/add.yaml
---
#https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-backend-ingress
  labels:
    name: hhb-backend-ingress
spec:
  rules:
    - host: ${HHB_FRONTEND_DNS}
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hhb-backend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-frontend-ingress
  labels:
    name: hhb-frontend-ingress
spec:
  rules:
    - host: ${HHB_FRONTEND_DNS}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hhb-frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-storybook-ingress
  labels:
    name: hhb-storybook-ingress
spec:
  rules:
    - host: sb.${HHB_FRONTEND_DNS}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hhb-storybook
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-unleashservice-ingress
  labels:
    name: hhb-unleashservice-ingress
spec:
  rules:
    - host: ${HHB_HOST}
      http:
        paths:
          - path: /api/unleash
            pathType: Prefix
            backend:
              service:
                name: hhb-unleashservice
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-backendburgers-ingress
  labels:
    name: hhb-backendburgers-ingress
spec:
  rules:
    - host: ${HHB_HOST}
      http:
        paths:
          - path: /api/burgers
            pathType: Prefix
            backend:
              service:
                name: hhb-backendburgers
                port:
                  number: 80
